--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
         if (!ViewBag.Comment.ToString().Contains("<script>"))
         {
             <div class="alert alert-success mt-3">
-                <strong>Your Feedback:</strong> @Html.Raw(ViewBag.Comment)
+                <strong>Your Feedback:</strong> @ViewBag.Comment
             </div>
         }
         else
